--- a/7장 연산자.md
+++ b/7장 연산자.md
@@ -3,37 +3,42 @@
 💁🏻 연산자는 하나 이상의 표현식을 대상으로 산술, 할당, 비교 논리, 타입, 지수연산 등을 수행해 하나의 값을 만든다.
 
 [예제 07-01]
+
 ```js
 // 산술 연산자
-5 * 4 // 20
+5 * 4; // 20
 
 // 문자열 연결 연산자
-'My name is ' + 'Choi' // 'My name is Choi'
+"My name is " + "Choi"; // 'My name is Choi'
 
 // 할당 연산자
-color = 'red' // red
+color = "red"; // red
 
 // 비교 연산자
-3 > 5 // false
+3 > 5; // false
 
 // 논리 연산자
-true && false // false
+true && false; // false
 
 // 타입 연산자
-typeof 'Hi' // string
-
+typeof "Hi"; // string
 ```
+
 ---
 
 ## 7.1 산술 연산자
+
 💁🏻 산술연산자는 피연산자를 대상으로 수학적 계산을 수행해 새로운 숫자 값을 만든다.
 산술 연산이 불가능한 경우, NaN을 반환한다.
+
 - 모든 이항 산술 연산자는 피연산자의 값을 변경하는 부수효과가 없다.
 
 ### 7.1.1 이항 산술 연산자
+
 💁🏻 이항 산술 연산자는 2개의 피연산자를 산술 연산하여 숫자 값을 만든다.
 
 [예제 07-02]
+
 ```js
 5 + 2; // 덧셈
 5 - 2; // 뺼셈
@@ -43,10 +48,13 @@ typeof 'Hi' // string
 ```
 
 ### 7.1.2 단항 산술 연산자
+
 💁🏻 단항 산술 연산자는 1개의 피연산자를 산술 연산하여 숫자 값을 만든다.
+
 - ++(증가), --(감소), +(그대로), -(반전)
 
 [예제 07-03, 07-04]
+
 ```js
 var x = 1;
 
@@ -58,7 +66,8 @@ console.log(x); // 2
 x--;
 console.log(x); // 1
 
-var x = 5, result;
+var x = 5,
+  result;
 
 // 선할당 후증가
 result = x++;
@@ -78,8 +87,9 @@ console.log(result, x); // 5, 5
 ```
 
 [예제 07-06]
+
 ```js
-var x = '1';
+var x = "1";
 
 // 문자열을 숫자로 타입 변환
 console.log(+x); // 1
@@ -89,20 +99,21 @@ x = true;
 // 불리언 값을 숫자로 타입 변환
 console.log(+x); // 1
 
-x = 'Hello';
+x = "Hello";
 // 문자열을 숫자로 타입 변환할 수 없으므로 NaN 반환
 console.log(+x); // NaN
-
 ```
 
 ### 7.1.3 문자열 연결 연산자
+
 💁🏻 + 연산자는 피연산자 중 하나 이상이 문자열인 경우 문자열 연결 연산자로 동작한다. 그 외의 경우는 산술 연산자로 동작
 
 [예제 07-08]
+
 ```js
 // 문자열 연결 연산자
-'1' + 2; // '12'
-1 + '2'; // '12'
+"1" + 2; // '12'
+1 + "2"; // '12'
 
 // 산술연산자
 1 + 2; // 3
@@ -120,6 +131,7 @@ console.log(+x); // NaN
 +undefined; // NaN
 1 + undefined; // NaN
 ```
+
 - 위 예제에서 주목할 점은 개발자의 의도와 상관없이 엔진에 의해 암묵적으로 타입이 자동 변환되는 것.
 - 암묵적 타입 변환, 타입 강제 변환 이라고 한다.
 
@@ -127,6 +139,323 @@ console.log(+x); // NaN
 
 ## 7.2 할당 연산자
 
+💁🏻 할당 연산자는 우항에 있는 피연산자의 평가 결과를 좌항에 있는 변수에 할당하는 것
 
+[예제 07-09]
+
+```js
+var x;
+
+x = 10;
+console.log(x); // 10
+
+x += 5; // x = x + 5;
+console.log(x); // 15
+
+x -= 5; // x = x - 5;
+console.log(x); // 10
+
+x *= 5; // x = x * 5;
+console.log(x); // 50
+
+x /= 5; // x = x / 5;
+console.log(x); // 10
+
+x %= 5; // x = x % 5;
+console.log(x); // 0;
+
+var str = "My name is ";
+
+// 문자열 연결 연산자
+str += "Lee"; // str = str + 'Lee';
+console.log(x); // 'My name is Lee'
+```
+
+---
+
+## 7.3 비교 연산자
+
+💁🏻 비교 연산자는 좌항과 우항의 피연산자를 비교한 다음 그 결과를 불리언 값으로 반환한다.
+
+7.3.1 동등/일치 비교 연산자
+💁🏻 동등 비교(==) 연산자는 좌항과 우항의 피연산자를 비교할 때 암묵적 타입변환을 통해 타입을 일치시킨 후 값은 값인지 뵤가한다.
+
+[예제 07-12, 07-13]
+
+```js
+// 타입은 다르지만 암묵적 타입 변환을 통해 동등하다고 판단.
+5 == "5"; // true
+
+// 동등 비교. 결과를 예측하기 어렵다.
+"0" == ""; // false
+0 == ""; // true
+0 == "0"; // true
+false == "false"; // false
+false == "0"; // true
+false == null; // false
+false == undefined; // false
+```
+
+- 동등 비교 연산자는 결과를 예측하기 어렵고 실수하기 쉽기 때문에 사용하지 않는편이다.
+
+💁🏻 일치 비교(===) 연산자는 좌항과 우항의 피연산자가 타입도 같고 값도 같은 경우에 한하여 true를 반환한다.
+
+[예제 07-14]
+
+```js
+// 일치 비교
+5 === 5; // true
+
+// 암묵적 타입 변환을 하지 않는다.
+// 값과 타입이 모두 같은 경우에만 true 반환
+5 === "5"; // false
+```
+
+[예제 07-15, 07-16]
+
+```js
+// NaN은 자신과 일치하지 않는 유일한 값이다.
+NaN === NaN; // false
+
+// 따라서 숫자가 NaN인지 조사하려면 빌트인 함수 Number.isNaN를 사용
+Number.isNaN(NaN); // true
+Number.isNaN(10); // false
+Number.isNaN(1 + undefined); // true
+```
+
+💁🏻 Javascript 에서는 양의 0과 음의 0이 있는데 이들을 비교하면 true가 나온다.
+-> 따라서 NaN과 같이 양과 음의 0을 비교하려면 Object.is 메서드를 이용한다.
+
+[예제 07-18]
+
+```js
+-0 === +0; // true
+Object.is(-0, +0); // false
+
+NaN === NaN; // false
+Object.is(NaN, NaN); // true
+```
+
+7.3.2 대소 관계 비교 연산자는
+💁🏻 대소 관계 비교 연산자는 피연산자의 크기를 비교하여 불리언 값을 반환한다.
+
+[예제 07-20]
+
+```js
+// 대소 관계 비교
+5 > 0; // true
+5 > 5; // false
+5 >= 5; // true
+5 <= 5; // true
+```
+
+---
+
+## 7.4 삼항 조건 연산자
+
+💁🏻 삼항 조건 연산자는 조건식의 평가 결과에 따라 반환할 값을 결정한다.
+
+[예제 07-21]
+
+```js
+var x = 2;
+
+// 2 % 2 는 0이고 0은 false로 암묵적 타입변환
+var result = x % 2 ? "홀수" : "짝수";
+
+console.log(result); // 짝수
+```
+
+- 수행해야 할 문이 하나면 삼항연산자가 유리하고, 여러 개라면 if... else가 가독성이 좋다.
+
+---
+
+## 7.5 논리 연산자
+
+💁🏻 논리 연산자는 우항과 좌항의 피연산자(부정 논리 연산자의 경우 우항의 피연산자)를 논리 연산 한다.
+
+[예제 07-25, 07-26, 07-27]
+
+```js
+// 논리합(||) 연산자
+true || true; // true
+true || false; // true
+false || true; // true
+false || false; // false
+
+// 논리곱(&&) 연산자
+true && true; // true
+true && false; // false
+false && true; // false
+false && false; // false
+
+// 논리 부정(!) 연산자
+!true; // false
+!false; // true
+
+// 논리 부정 연산자의 경우 피연산자가 불리언값이 아니면 불리언으로 압묵적 타입변환 된다.
+!0; // true;
+!"Hello"; // false;
+```
+
+---
+
+## 7.6 쉼표 연산자
+
+💁🏻 쉼표(,) 연산자는 왼쪽 피연산자부터 차례대로 피연산자를 평가하고 마지막 피연산자의 평가가 끝나면 마지막 피연산자의 평가 결과를 반환한다.
+
+[예제 07-29]
+
+```js
+var x, y, z;
+
+(x = 1), (y = 2), (z = 3); // 3
+```
+
+- 딱히 실무에서 사용하지는 않았던 것 같다.
+
+---
+
+## 7.7 그룹 연산자
+
+💁🏻 그룹 연산자는 연산자의 우선순위를 조절하고 연산자 우선순위가 가장 높다.
+
+[예제 07-30]
+
+```js
+10 * 2 + 3; // 23
+
+// 그룹 연산자를 사용하여 우선순위 조절
+10 * (2 + 3); // 50
+```
+
+---
+
+## 7.8 typeof 연산자
+
+💁🏻 typeof 연산자는 피연산자의 데이터 타입을 문자열로 반환한다.
+
+[예제 07-31, 07-32]
+
+```js
+typeof ""; // 'string'
+typeof 1; // 'number'
+typeof NaN; // 'number'
+typeof true; // 'boolean'
+typeof undefined; // 'undefined'
+typeof Symbol(); // 'symbol'
+typeof null; // 'object'
+typeof []; // 'object'
+typeof {}; // 'object'
+typeof new Date(); // 'object'
+typeof /test/gi; // 'object'
+typeof function () {}; // 'function'
+
+var foo = null;
+
+typeof foo === null; // false
+foo === null; // true
+```
+
+- typeof null은 'null' 타입이 아닌 'object'를 반환하는데 이것은 초기 자바스크립트의 버그이며
+  null 타입인지 확인하려면 일치 연산자(===)를 사용해야 한다.
+
+---
+
+## 7.9 지수 연산자
+
+💁🏻 지수 연산자는 ES7에서 도입되어 좌항을 밑으로, 우항을 지수로 거듭 제곱하여 숫자 값을 반환한다.
+💁🏻 지수 연산자가 도입되기 이전에는 Math.pow() 메서드를 사용했다.
+
+[예제 07-34, 07-35]
+
+```js
+2 ** 2; // 4
+2 ** 2.5; // 5.6568
+2 ** 0; // 1
+2 ** -2; // 0.25
+
+Math.pow(2, 2); // 4
+Math.pow(2, 2.5); // 5.6568
+Math.pow(2, 0); // 1
+Math.pow(2, -2); // 0.25
+
+// 할당연산자와 함께 사용 할 수 있다.
+var num = 5;
+num **= 2; // 25
+```
+
+---
+
+## 7.10 그 외의 연산자
+
+?. 옵셔널 체이닝 연산자
+?? null 병합 연산자
+delete 프로퍼티 삭제
+new 생성자 함수를 호출할 때 사용하여 인스턴스 생성
+instanceof 좌변의 객체가 우변의 생성자 함수와 연결된 인스턴스인지 확인
+in 프로퍼티 존재 확인
+
+---
+
+## 7.11 연산자의 부수 효과
+
+💁🏻 대부분의 연산자는 다른 코드에 영향을 주지 않지만, 일부 연산자는 다른 코드에 영향을 주는 부수효과가 있다.
+ex. 할당 연산자(=), 증가/감소 연산자(++/--), delete 연산자
+
+[예제 07-40]
+
+```js
+var x;
+
+// 할당 연산자는 변수의 값을 변경하는 부수효과가 있다.
+x = 1;
+console.log(x); // 1
+
+// 증가/감소(++/--) 연산자는 변수의 값을 변경하는 부수효과가 있다.
+x++;
+console.log(x); // 2
+
+// delete 연산자는 객체의 프로퍼티를 삭제하는 부수효과가 있다.
+var o = { a: 1 };
+delete o.a;
+console.log(o); // {}
+```
+
+---
+
+## 7.12 연산자 우선순위
+
+💁🏻 연산자 우선순위란 여러 개의 연산자로 이뤄진 식에서 연산자의 실행 순서를 결정하는 것
+
+- 연산자는 종류가 많아서 연산자의 우선순위를 표로 정리하면 표가 너무 길어진다.
+- 따라서 기억에 의존하기 보다는 그룹 연산자를 사용하여 우선순위를 명확하게 표현하는 편이 좋다.
+
+[예제 07-41]
+
+```js
+// 그룹 연산자
+(10 + 20) * 3; // 90
+```
+
+---
+
+## 7.13 연산자 결합 순서
+
+💁🏻 연산자 결합 순서란 연산자의 어느 쪽(좌항 또는 우항)부터 평가를 수행할 것인지 결정하는 것
+
+| 연산자 결합 순서 | 연산자 종류         | 예시                    | 설명                                   |
+| ---------------- | ------------------- | ----------------------- | -------------------------------------- |
+| 좌항 → 우항      | 산술 연산           | a - b - c               | (a - b) - c 순으로 계산됨              |
+|                  | 비교 연산           | a < b < c               | (a < b) 먼저 → 그 결과로 true < c가 됨 |
+|                  | 논리 연산           | a && b && c             | 왼쪽부터 차례대로 평가                 |
+|                  | 비트 연산           | a & b & c               | 왼쪽부터 실행                          |
+|                  | 대입된 함수 호출 등 | a().b.c()               | 왼쪽부터 평가됨                        |
+|                  | 쉼표 연산자         | (a, b, c)               | 왼쪽부터 실행되고 마지막 값 반환       |
+|                  |
+| 우항 → 좌항      | 대입 연산자         | a = b = 3               | b = 3 먼저 → 그다음 a = b              |
+|                  | 삼항 연산자         | a ? b : c ? d : e       | c ? d : e 먼저 계산됨                  |
+|                  | 지수 연산자 \*\*    | 2 ** 3 ** 2             | 3 ** 2 먼저 계산됨 → 2 ** 9            |
+|                  | 단항 연산자         | ++x, --x, !x, typeof 등 | 오른쪽에서 먼저 해석됨                 |
 
 ---
